// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LoginForm /> should call the handleCodeChange prop when the code is changed 1`] = `
<div>
  <form
    action="/"
    class="horizontally-centered full-width"
    method="post"
  >
    <div
      class="css-1wz31qk-MuiStack-root"
    >
      <h1
        class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom css-1vw6mcs-MuiTypography-root"
      >
        Cod trimis pe email
      </h1>
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-gutterBottom css-11cn0eh-MuiTypography-root"
      >
        Tocmai ți-am trimis un email cu codul de autenficare.
      </h6>
      <div
        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-readOnly css-q0jhri-MuiInputBase-root-MuiInput-root"
      >
        <input
          class="MuiInputBase-input MuiInput-input MuiInputBase-readOnly css-1x51dt5-MuiInputBase-input-MuiInput-input"
          name="email"
          placeholder="Email"
          readonly=""
          type="text"
          value=""
        />
      </div>
      <div
        class="MuiFormControl-root MuiTextField-root css-1u3bzj6-MuiFormControl-root-MuiTextField-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-standard MuiFormLabel-colorPrimary Mui-focused MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-standard css-1c2i806-MuiFormLabel-root-MuiInputLabel-root"
          data-shrink="true"
          for=":r2:"
          id=":r2:-label"
        >
          Cod
        </label>
        <div
          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary Mui-focused MuiInputBase-formControl css-v4u5dn-MuiInputBase-root-MuiInput-root"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiInput-input css-1x51dt5-MuiInputBase-input-MuiInput-input"
            id=":r2:"
            name="code"
            type="text"
            value=""
          />
        </div>
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium Mui-disabled MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-sghohy-MuiButtonBase-root-MuiButton-root"
        disabled=""
        name="intent"
        tabindex="-1"
        type="submit"
        value="validate"
      >
        Validează codul
      </button>
    </div>
  </form>
</div>
`;

exports[`<LoginForm /> should call the handleEmailChange prop when the email is changed 1`] = `
<div>
  <form
    action="/"
    class="horizontally-centered full-width"
    method="post"
  >
    <div
      class="css-1wz31qk-MuiStack-root"
    >
      <h1
        class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom css-1vw6mcs-MuiTypography-root"
      >
        Logare
      </h1>
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-gutterBottom css-11cn0eh-MuiTypography-root"
      >
        Vei primi un cod unic pe adresa de email. Folosește acel cod pentru a finaliza autentificarea.
      </h6>
      <div
        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary Mui-focused css-q0jhri-MuiInputBase-root-MuiInput-root"
      >
        <input
          class="MuiInputBase-input MuiInput-input css-1x51dt5-MuiInputBase-input-MuiInput-input"
          name="email"
          placeholder="Email"
          type="text"
          value=""
        />
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium Mui-disabled MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-sghohy-MuiButtonBase-root-MuiButton-root"
        disabled=""
        name="intent"
        tabindex="-1"
        type="submit"
        value="generate"
      >
        Loghează-te în aplicație
      </button>
    </div>
  </form>
</div>
`;

exports[`<LoginForm /> should match the snapshot 1`] = `
<div>
  <form
    action="/"
    class="horizontally-centered full-width"
    method="post"
  >
    <div
      class="css-1wz31qk-MuiStack-root"
    >
      <h1
        class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom css-1vw6mcs-MuiTypography-root"
      >
        Logare
      </h1>
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-gutterBottom css-11cn0eh-MuiTypography-root"
      >
        Vei primi un cod unic pe adresa de email. Folosește acel cod pentru a finaliza autentificarea.
      </h6>
      <div
        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary css-q0jhri-MuiInputBase-root-MuiInput-root"
      >
        <input
          class="MuiInputBase-input MuiInput-input css-1x51dt5-MuiInputBase-input-MuiInput-input"
          name="email"
          placeholder="Email"
          type="text"
          value=""
        />
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium Mui-disabled MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-sghohy-MuiButtonBase-root-MuiButton-root"
        disabled=""
        name="intent"
        tabindex="-1"
        type="submit"
        value="generate"
      >
        Loghează-te în aplicație
      </button>
    </div>
  </form>
</div>
`;

exports[`<LoginForm /> should match the snapshot when the type is set to error 1`] = `
<div>
  <form
    action="/"
    class="horizontally-centered full-width"
    method="post"
  >
    <div
      class="css-1wz31qk-MuiStack-root"
    >
      <h1
        class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom css-1vw6mcs-MuiTypography-root"
      >
        Ceva nu a funcționat
      </h1>
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-gutterBottom css-11cn0eh-MuiTypography-root"
      >
        A apărut o problemă. E posibil ca unul dintre servicii să nu funcționeze, adresa introdusă să nu existe în baza noastră de date sau codul să nu fie scris corect.
      </h6>
      <a
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-sghohy-MuiButtonBase-root-MuiButton-root"
        href="/login"
        tabindex="0"
      >
        Încearcă din nou
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </a>
    </div>
  </form>
</div>
`;

exports[`<LoginForm /> should match the snapshot when the type is set to new 1`] = `
<div>
  <form
    action="/"
    class="horizontally-centered full-width"
    method="post"
  >
    <div
      class="css-1wz31qk-MuiStack-root"
    >
      <h1
        class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom css-1vw6mcs-MuiTypography-root"
      >
        Cod trimis pe email
      </h1>
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-gutterBottom css-11cn0eh-MuiTypography-root"
      >
        Tocmai ți-am trimis un email cu codul de autenficare.
      </h6>
      <div
        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-readOnly css-q0jhri-MuiInputBase-root-MuiInput-root"
      >
        <input
          class="MuiInputBase-input MuiInput-input MuiInputBase-readOnly css-1x51dt5-MuiInputBase-input-MuiInput-input"
          name="email"
          placeholder="Email"
          readonly=""
          type="text"
          value=""
        />
      </div>
      <div
        class="MuiFormControl-root MuiTextField-root css-1u3bzj6-MuiFormControl-root-MuiTextField-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-standard MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-standard css-aqpgxn-MuiFormLabel-root-MuiInputLabel-root"
          data-shrink="false"
          for=":r0:"
          id=":r0:-label"
        >
          Cod
        </label>
        <div
          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl css-v4u5dn-MuiInputBase-root-MuiInput-root"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiInput-input css-1x51dt5-MuiInputBase-input-MuiInput-input"
            id=":r0:"
            name="code"
            type="text"
            value=""
          />
        </div>
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium Mui-disabled MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-sghohy-MuiButtonBase-root-MuiButton-root"
        disabled=""
        name="intent"
        tabindex="-1"
        type="submit"
        value="validate"
      >
        Validează codul
      </button>
    </div>
  </form>
</div>
`;

exports[`<LoginForm /> should match the snapshot when the type is set to old 1`] = `
<div>
  <form
    action="/"
    class="horizontally-centered full-width"
    method="post"
  >
    <div
      class="css-1wz31qk-MuiStack-root"
    >
      <h1
        class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom css-1vw6mcs-MuiTypography-root"
      >
        Cod trimis anterior pe email
      </h1>
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-gutterBottom css-11cn0eh-MuiTypography-root"
      >
        Un email cu codul de autenficare ți-a fost trimis în ultimele 30 de minute.
      </h6>
      <div
        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-readOnly css-q0jhri-MuiInputBase-root-MuiInput-root"
      >
        <input
          class="MuiInputBase-input MuiInput-input MuiInputBase-readOnly css-1x51dt5-MuiInputBase-input-MuiInput-input"
          name="email"
          placeholder="Email"
          readonly=""
          type="text"
          value=""
        />
      </div>
      <div
        class="MuiFormControl-root MuiTextField-root css-1u3bzj6-MuiFormControl-root-MuiTextField-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-standard MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-standard css-aqpgxn-MuiFormLabel-root-MuiInputLabel-root"
          data-shrink="false"
          for=":r1:"
          id=":r1:-label"
        >
          Cod
        </label>
        <div
          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl css-v4u5dn-MuiInputBase-root-MuiInput-root"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiInput-input css-1x51dt5-MuiInputBase-input-MuiInput-input"
            id=":r1:"
            name="code"
            type="text"
            value=""
          />
        </div>
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium Mui-disabled MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-sghohy-MuiButtonBase-root-MuiButton-root"
        disabled=""
        name="intent"
        tabindex="-1"
        type="submit"
        value="validate"
      >
        Validează codul
      </button>
    </div>
  </form>
</div>
`;
